26/11/2011

Added support for nexted expressions, ie: (expression).
Added primitive support for [] whileNil: and whileNotNil:.

25/11/2011 Changes

Full block access to outside variables.
Fixed bug with creation of variables.

24/11/2011 Changes

Finished Block access to variables outside of the block.

23/11/2011 Changes

Merges upstream changes, fixed conflicts and added meven plugin compiler version.

22/11/2011 Changes

Added argument to variable lookup to cater for outercontext lookups when in blocks.
Ensuring that the class initialize method gets invoked for each created class.

21/11/2011 Changes

Added cascaded KeywordMessageElement processing.
Added cascaded BinaryMessageElement processing.

20/11/2011 Changes

Added bootstrap methods to accept each of the class creation cascade messages. 

19/11/2011 Changes

Block access to outcontext Method Arguments now working.
Need to clean up method arguments to use an array everywhere.
Added call to router in Stout. Next dispatch to block.

18/11/2011 Changes

Block access to outercontext temporaries now working.
Working on supporting same with outercontext fields.

17/11/2011 Changes

Working on blocks accessing temporary variables defined outside of the Block.

15/11/2011 Changes

Working on blocks within blocks. A few compiler issues.
Made whileTrue: / whileFalse: on BlockClosures primitive.

14/11/2011 Changes

Added convieniance methods to ProtoObject for sending messages.
Fixed bug with multi-blocks.

13/11/2011 Changes

Added Block applyTo method argument support.

12/11/2011 Changes

Added Block argument (variable) support.
Added Block temporary support.


11/11/2011 Changes

Fixed block compilation bug where block was compiled inline and as a Block.
Fixed boolean examples to use true not True the class.


09/11/2011 Changes

Initial Block support complete.


08/11/2011 Changes

Adding Block support. Will handle ^ blocks soon.


07/11/2011 Changes
