@@ -1,6 +1,8 @@
 /* Redline Smalltalk, Copyright (c) James C. Ladd. All rights reserved. See LICENSE in the root of this distribution */
 package st.redline.stout;
 
+import st.redline.ProtoObject;
+
 import javax.servlet.http.HttpServletResponse;
 import java.io.IOException;
 
@@ -9,7 +11,8 @@ class NoOpRouter implements Router {
 
     private NoOpRouter() {}
 
-    public void dispatchToBlock(HttpServletResponse servletResponse, String requestPath) throws IOException {}
+    public void dispatchToBlock(ProtoObject servletResponse, ProtoObject requestPath) throws IOException { System.out.println("NOOP"); }
+    public void dispatchToBlock(HttpServletResponse servletResponse, String requestPath) throws IOException { System.out.println("NOOP"); }
 
     public boolean canHandleRequest(String requestPath) {
         return true;
